@@ -1,3 +1,11 @@
+Thu Aug  3 15:04:34 1995  Sam Hartman  <hartmans@tertius.mit.edu>
+
+	* configure.in: Check for vhangup and killpg.
+
+	* cleanup.c (pty_cleanup): Kill the process group associated with
+        the pty if using revoke.  This won't always work, but will at
+        least attempt to remove processes associated with the pty.
+
 Wed Aug  2 11:59:19 1995  Sam Hartman  <hartmans@tertius.mit.edu>
 
 	* init.c (pty_init): New file to handle initialization--currently only error tables.
